# hothouse-effects

./: .gitignore  .gitmodules  README.md
Flick/: Makefile  reverbsploodge.cpp  reverbsploodge.h  sploodge-reverb.cpp
src/: hothouse.h
src/Flick/: Makefile  README.md  extended_oscillator.cpp  flick.cpp
src/MutableRings/: CMakeLists.txt  Makefile  README.md  mutable_rings.cpp
src/PlateReverb/: Makefile  README.md  plate_reverb.cpp
src/Platerra/: Makefile  README.md  platerra.cpp
